--- a/contest-gallery/v10/v10-css/cg_options_style.css
+++ b/contest-gallery/v10/v10-css/cg_options_style.css
@@ -2123,7 +2123,7 @@ div.tabcontents
 	background-color: #95ff79 !important;
 }
 
-.cg-pro-false  .cg_disabled_one input,.cg_disabled_one select{
+.cg-pro-false  .cg_disabled_one input{
 	background-color: #95ff79 !important;
 }
 
